<resources>
    <string name="app_name">SmartSheep</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password debe tener al menos 4 caracteres</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menú Principal</string>
    <string name="menu_property">Predio</string>
    <string name="menu_logout">Salir de la cuenta</string>
    <string name="hello">Hola </string>

    <string name="home_second">Home Second</string>
    <string name="property_analisis">Análisis de Predio</string>
    <string name="sheep_add">Agregar oveja</string>
    <string name="search_sheep">Buscar oveja</string>
    <string name="voice_search">Buscar por voz</string>

    <!--String Sheep Nav-->
    <string name="sanitation">Sanitidad</string>
    <string name="production">Producción</string>
    <string name="geneaoly">Genealogía</string>
    <string name="reproduction">Reproducción</string>

    <!-- Sheep Data -->
    <string name="earring">Arete</string>
    <string name="earringColor">Color de Arete</string>
    <string name="gender">Género</string>
    <string name="breed">Raza</string>
    <string name="birth_weight">Peso Nacimiento</string>
    <string name="birth_date">Fecha Nacimiento: 2020–01-01</string>
    <string name="purpose">Propósito</string>
    <string name="category">Categoría</string>
    <string name="merit">Mérito</string>
    <string name="is_dead">Está Vivo</string>
    <string-array name="gender_selection">
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>
    <string-array name="status">
        <item>Viva</item>
        <item>Muerta</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="send">Enviar</string>
    <string name="update">Actualizar</string>
</resources>
