<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_sheep_navigation"
    app:startDestination="@id/navigation_sanitation">

    <fragment android:id="@+id/navigation_sanitation"
        android:name="cl.uach.inf.smartsheep.ui.sheep.SheepFragment"
        android:label="@string/sanitation"
        />

    <fragment
        android:id="@+id/navigation_production"
        android:name="cl.uach.inf.smartsheep.ui.production.ProductionFragment"
        android:label="@string/production"
        />

    <fragment
        android:id="@+id/navigation_genealogy"
        android:name="cl.uach.inf.smartsheep.ui.genealogy.GenealogyFragment"
        android:label="@string/geneaoly"
        />

    <fragment
        android:id="@+id/navigation_reproduction"
        android:name="cl.uach.inf.smartsheep.ui.reproduction.ReproductionFragment"
        android:label="@string/reproduction"
        />


</navigation>