<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_1"
    android:isScrollContainer="true"
    android:scrollbars="vertical">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@color/secondary2_3"
        android:onClick="onClick"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/send"
        android:textColor="@color/design_default_color_surface"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/form_earring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/earring"
                android:inputType="number"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/form_earringColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:accessibilityHeading="true"
                android:accessibilityPaneTitle="@string/earringColor"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/earringColor"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/form_merit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/merit"
                android:inputType="number"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/form_isDead"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:dropDownWidth="wrap_content"
                android:entries="@array/status"
                android:gravity="center" />

            <Spinner
                android:id="@+id/form_gender"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:dropDownWidth="wrap_content"
                android:entries="@array/gender_selection"
                android:gravity="center"
                android:scrollbarSize="50dp"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/form_breed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/breed"
                android:inputType="text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/form_birthWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/birth_weight"
                android:inputType="number|numberDecimal"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/form_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/category"
                android:inputType="text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/form_purpose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/purpose"
                android:inputType="text"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
