<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:id="@+id/fragment_home">

    <Button
        android:id="@+id/sheep_button"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="168dp"
        android:background="#2196F3"
        android:text="@string/sheep_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="298dp"
        android:layout_height="200dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:background="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sheep_button"
        app:layout_constraintVertical_bias="0.17000002">


        <SearchView
            android:id="@+id/searchView"
            android:layout_width="174dp"
            android:layout_height="42dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.253" />

        <ImageButton
            android:id="@+id/voice_search"
            android:layout_width="54dp"
            android:layout_height="42dp"
            android:layout_marginTop="40dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/voice_search"
            android:src="@android:drawable/ic_btn_speak_now"
            android:tint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/searchView"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/search_sheep"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:onClick="onClick"
            android:text="@string/search_sheep"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>